Correcto Funcionamiento del dark mode
yujuuuuuuuuu

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -3,5 +3,5 @@ body {
   font-family: "Montserrat", sans-serif;
   font-size: 14px;
   color: #000000;
-  //transition: 0.3s ease all;
+  transition: 0.3s ease all;
 }
