--- a/sass/layout/_home.scss
+++ b/sass/layout/_home.scss
@@ -70,6 +70,7 @@
 .trending-GIFOS {
   background: #f3f5f8;
   height: 430px;
+  transition: 0.4s ease all;
 }
 
 .title-and-text {
